# sorep

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  pyproject.toml  sorep.mplstyle
scripts/: aiida_dump_mc3d.py  aiida_import_nomad.py  aiida_nchi_extras.py  aiida_submission.py  analyze_brfc.py  batio3_dendrogram.py  check_eff_mass.py  collate_data.py  collate_mc3d.py  collate_nomad.py  compute_bands_screening_quantities.py  compute_distance.py  compute_dos.py  compute_kin_dos.py  compute_soap.py  compute_tcm_criteria.py  dev.py  evaluate_brfc.py  export.py  export_from_aiida.py  featurize.py  fermi_and_occs.py  mc3d_id.py  occupations_dev.py  permutation_feature_importance.py  plot_data_summaries.py  plot_distances.py  plot_segments.py  ptable.json  pyscf_dev.py  qe_fermi_mismatch.py  regression_dev.py  to_hdf5.py  train_brfc.py  train_rfc.py
scripts/batio3/: aiida_dump_batio3.py  plot_timing.py
src/sorep/: __about__.py  __init__.py  band_segment.py  band_structure.py  constants.py  dos.py  features.py  fermi.py  material.py  pbc.py  prettify.py  smearing.py
src/sorep/data/: __init__.py
src/sorep/dos/: __init__.py  cython.pyx  python.py
src/sorep/occupation/: __init__.py  cython.pyx  python.py
src/sorep/smearing/: __init__.py  python.py
src/sorep/smearing/cython/: __init__.pxd  cfuncs.pxd  cfuncs.pyx  ufuncs.pxd  ufuncs.pyx
src/sorep/spectra/: __init__.py  pyscf.py
test/: conftest.py  test_fermi.py  test_smearing.py
test/resources/one_spin_insulator/: bands.npz  metadata.json  structure.xyz
test/resources/one_spin_metal/: bands.npz  metadata.json  structure.xyz
test/resources/two_spin_insulator/: bands.npz  metadata.json  structure.xyz
test/resources/two_spin_metal/: bands.npz  metadata.json  structure.xyz
