[tool.poetry]
name = "sorep"
version = "0.1.0"
description = "Spectral Operator Representations"
authors = ["Austin Zadoks <austin.zadoks@protonmail.com>"]
license = "GPL"
readme = "README.md"
exclude = [
    '.github/',
    '.vscode/',
    'docs/',
    'examples/',
    'test/',
    'scripts/'
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0"
scipy = "^1.14.0"
ase = "^3.23.0"
scikit-learn = "^1.5.1"
imbalanced-learn = "^0.12.3"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.0"
tqdm = "^4.66.4"
pytest = "^8.2.2"
ipython = "^8.26.0"
sphinx = "^7.3.7"
myst-parser = "^3.0.1"
pre-commit = "^3.7.1"
pylint = "^3.2.5"
black = "^24.4.2"

[tool.isort]
profile = "black"
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120
additional-builtins = ["BandStructure",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
